Add more text content to home

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -17,3 +17,8 @@
        by header. */
     scroll-margin-top: 4rem;
 }
+
+.container a {
+    color: rgb(18, 78, 189);
+    font-weight: inherit;
+}
