--- a/components/header.module.css
+++ b/components/header.module.css
@@ -7,12 +7,16 @@
     height: 3em;
     width: 100%;
 
-    background-color: rgb(184, 184, 184);
-    /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); */
+    background-color: rgb(214, 214, 214);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+
+    /* font-family: monospace; */
+    font-family: "Courier New", Courier, monospace;
 }
 
 .container > div {
@@ -46,7 +50,7 @@
 }
 
 .container > div:nth-child(2) > span {
-    padding: 0rem 1.0rem 0 1.0rem;
+    padding: 0rem 2.0rem 0 2.0rem;
     /* border: 1px black solid; */
 }
 
