--- a/components/projects/ProjectPage.module.css
+++ b/components/projects/ProjectPage.module.css
@@ -5,7 +5,7 @@
     padding: 1rem;
 }
 
-.content h1, .content h2, .content p {
+.content h1, .content h2, .content p, .content ul {
     max-width: 38rem;
     margin-left: auto;
     margin-right: auto;
