--- a/pages/projects/index.module.css
+++ b/pages/projects/index.module.css
@@ -1,56 +1,91 @@
 
 .flexGrid {
-    display: flex;
+    /* display: flex; */
 
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 
     /* justify-content: space-between; */
-    justify-content: center;
+    /* justify-content: center; */
 
-    margin-top: 3rem;
+    margin-top: 1rem;
 }
 
 
 .flexGrid .projectCard {
-    /* width: 100%; */
-    width: 18rem;
+    width: calc(100% - 0.6rem);
+
+    display: flex;
+    /* justify-content: left; */
+
+    /* width: 18rem; */
     /* height: 8rem; */
 
-    margin: 0.2rem;
+    /* margin: 0.2rem; */
     border: 0.3rem solid black;
+
+    margin-bottom: 0.5rem;
 
     /* flex: 0 1 calc(33.33% - 10px); */
 
-    justify-content: center;
 
 
     background-color: rgb(190, 190, 190);
     color: black;
 }
 
-.projectCardText {
-    padding: 0.5rem;
-}
-
-.projectCardText h3 {
-    margin: 0;
-}
-
-.projectCardText p {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-
-.projectCardText p:nth-child(2) {
-    color: rgb(99, 99, 99);
-    font-size: 0.95em;
-    /* font-weight: bold; */
-}
 
 .projectCardImg {
+    background-color: rgb(80, 80, 80);
+    border-right: 1px solid rgb(32, 32, 32);
+   
+    flex: 0 0 10rem;
+    /* width: 10rem; */
+    height: 10rem;
+
+    /* display: inline-block; */
+
+    /* width: 50px;
+    height: 50px; */
+
     position: relative;
-    width: 100%;
-    height: calc(18rem * 9/16);
+    /* height: calc(18rem * 9/16); */
 }
 
+
+
+.projectCardText {
+    padding: 0.7rem;
+    /* display: inline-block; */
+
+    flex-grow: 1;
+
+    /* width: calc(100% - 12rem); */
+}
+
+/* Title */
+.projectCardText h3 {
+    margin: 0;
+    font-size: 1.5rem;
+}
+
+/* Date */
+.projectCardText p:nth-child(2) {
+    color: rgb(99, 99, 99);
+    margin: 0.4rem 0 0 0;
+    font-style: italic;
+}
+
+/* Desc */
+.projectCardText p:nth-child(3) {
+    font-size: 1.0rem;
+    margin: 0.9rem 0 0 0;
+}
+
+/* Build with */
+.projectCardText p:nth-child(4) {
+    font-size: 1.0rem;
+    margin: 0.9rem 0 0 0;
+    color: rgb(57, 100, 66);
+    font-weight: bold;
+}
 
