--- a/components/projects/ProjectPage.module.css
+++ b/components/projects/ProjectPage.module.css
@@ -36,3 +36,12 @@
     border: 0;
 }
 
+
+.content .date {
+    margin-top: -0.5rem;
+    margin-bottom: 2rem;
+
+    font-style: italic;
+    font-weight: bold;
+    color: grey;
+}
