--- a/components/projects/ProjectPage.module.css
+++ b/components/projects/ProjectPage.module.css
@@ -6,7 +6,7 @@
 }
 
 .content h1, .content h2, .content p, .content ul {
-    max-width: 38rem;
+    max-width: 40rem;
     margin-left: auto;
     margin-right: auto;
 }
@@ -21,8 +21,9 @@
 } */
 
 .iframeContainer {
-    width: 80vw;
-    height: 50rem;
+    width: 40rem;
+    height: 40rem;
+
     display: block;
 
     margin: 3rem auto 0 auto;
@@ -32,9 +33,35 @@
 
 .iframeContainer iframe {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 2.4rem);
     border: 0;
 }
+
+
+.iframeContainer div:nth-child(1) {
+    background-color: rgb(223, 223, 223);
+
+    height: 2.4rem;
+    font-size: 1.4rem;
+    
+    border-bottom: 2px solid rgb(143, 143, 143);
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.iframeContainer div:nth-child(1) span {
+    margin-left: 0.4rem;
+    margin-right: 0.4rem;
+
+
+    display: inline-block;
+
+    color: black;
+    cursor: pointer;
+}
+
 
 
 .content .date {
