--- a/pages/projects/index.module.css
+++ b/pages/projects/index.module.css
@@ -23,14 +23,16 @@
     /* margin: 0.2rem; */
     border: 0.2rem solid black;
 
-    margin-bottom: 1.0rem;
+    margin-bottom: 1.5rem;
 
     /* flex: 0 1 calc(33.33% - 10px); */
 
 
-
     background-color: rgb(190, 190, 190);
     color: black;
+
+
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.5);
 }
 
 
