Add caption to project pages

--- a/components/projects/ProjectPage.module.css
+++ b/components/projects/ProjectPage.module.css
@@ -76,3 +76,9 @@
     font-weight: bold;
     color: grey;
 }
+
+.content .caption {
+    font-style: italic;
+    color: grey;
+    margin-bottom: 1.5rem;
+}
