--- a/components/header.module.css
+++ b/components/header.module.css
@@ -1,8 +1,8 @@
-.container {
-    position: fixed;
+.header {
+    position: sticky;
     top: 0;
     left: 0;
-    z-index: 1000;
+    z-index: 100;
 
     height: 3em;
     width: 100%;
@@ -19,7 +19,7 @@
     font-family: "Courier New", Courier, monospace;
 }
 
-.container > div {
+.header > div {
     /* border: 3px solid black; */
 
     /* padding: 5px; */
@@ -28,39 +28,19 @@
 
 }
 
-.container a {
+.header a {
     text-decoration: none;
     color: black;
 }
 
-.container > div:nth-child(1) {
-    padding-left: 1.5em;
-    /* background-color: rgb(51, 51, 175); */
-}
-
-.container > div:nth-child(1) > a {
-    font-weight: bold;
-    font-size: 1.2rem;
-}
 
 
-
-.container > div:nth-child(2) {
+.header > div:nth-child(2) {
     /* background-color: rgb(48, 110, 72); */
 }
 
-.container > div:nth-child(2) > span {
+.header > div:nth-child(2) > span {
     padding: 0rem 2.0rem 0 2.0rem;
     /* border: 1px black solid; */
 }
 
-.container > div:nth-child(3) {
-    /* background-color: rgb(39, 63, 48); */
-    padding-right: 1rem;
-}
-
-.container > div:nth-child(3) a {
-    /* width: 1.5em; */
-    font-size: 1.5rem;
-    padding: 0rem 0.5rem 0 0.5rem;
-}
