--- a/app/globals.css
+++ b/app/globals.css
@@ -45,6 +45,13 @@ h3 {
     margin-bottom: 0.8rem;
 }
 
+h4 {
+    font-size: 1.0rem;
+    font-weight: bold;
+    margin-bottom: 0.6rem;
+}
+
+
 p {
     margin-bottom: 1rem;
 }
