--- a/app/globals.css
+++ b/app/globals.css
@@ -31,33 +31,40 @@ body {
     line-height: 1.6rem;
 }
 
+/* Inline <code> elements appear to push away the line below */
+code {
+    line-height: 1.5rem;
+}
+
 h1 {
     font-size: 2rem;
     font-weight: bold;
-    margin-bottom: 1rem;
 }
 
 h2 {
     font-size: 1.5rem;
     font-weight: bold;
-    margin-bottom: 1rem;
+
+    margin-top: 2.5rem;
 }
 
 h3 {
     font-size: 1.2rem;
     font-weight: bold;
-    margin-bottom: 0.8rem;
+
+    margin-top: 1.7rem;
 }
 
 h4 {
     font-size: 1.0rem;
     font-weight: bold;
-    margin-bottom: 0.6rem;
+
+    margin-top: 1.2rem;
 }
 
 
-p {
-    margin-bottom: 1rem;
+p, ul {
+    margin-top: 1rem;
 }
 
 a {
