Add double pendulemon project
Also add a page on canvasLib (2019)

--- a/app/globals.css
+++ b/app/globals.css
@@ -76,3 +76,8 @@ li {
     list-style-type: disc;
     margin-left: 1.75rem;
 }
+
+/* Nested lists should not have ul margins. */
+li ul {
+    margin-top: 0;
+}
