--- a/components/dropdown.module.css
+++ b/components/dropdown.module.css
@@ -32,10 +32,10 @@
     min-width: 100px;
     animation: fade-in 0.3s ease;
 
-    padding: 5px 10px 3px 9px;
+    padding: 0px 10px 3px 9px;
     margin: 0px 0px 10px 5px;
 
-    border-left: 2px solid rgb(216, 216, 216);
+    border-left: 2px solid rgba(216, 216, 216, 0.1);
 }
 
 @keyframes fade-in {
